# Containment-Join-Data

./: .gitignore  Cont.sh  Cont08.sh  Cont08Mem.sh  ContAdapt.sh  README.md  convert2.py  convertOutput.py  convertToCSV  dice.sh  dice08.sh  dice08Mem.sh  diceAdapt.sh  get_distribution.py  get_token_frequency.py  jaccard.sh  jaccard08.sh  outline.sh  output.csv  output_BMS  output_bms.csv  output_unif.csv  output_zipf.csv  plot_distribution.py  preprocess.py  script.sh  ssjoin-0.1-sparsehash.tar.xz  untitled.sh  verify.py  zhengw14@compsbk4:~:CSC2525-Cont:CSC2525-Project:s
ConversionScripts/: aol-data.sh  createraw.py  dblp_author_title.xsl  random_lines.py  spotify.py  zipf_dist.py
DataScraper/: 550.html  X.html  requirements.txt  test.html  test1_wikitablescrape.py  test_wikitablescrape.py  view-source_https___en.wikipedia.org_wiki_List_of_mountains_by_elevation.html  view-source_https___en.wikipedia.org_wiki_National_Basketball_Association.html  wikitablescrape.py
DataScraper/output/: output_2.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv
DataScraper/output/test/: test.csv
DataScraper/outputTables/123/: table.csv  table_1.csv  table_10.csv  table_11.csv  table_12.csv  table_13.csv  table_14.csv  table_15.csv  table_16.csv  table_17.csv  table_18.csv  table_19.csv  table_2.csv  table_20.csv  table_21.csv  table_22.csv  table_23.csv  table_24.csv  table_25.csv  table_26.csv  table_27.csv  table_28.csv  table_29.csv  table_3.csv  table_4.csv  table_5.csv  table_6.csv  table_7.csv  table_8.csv  table_9.csv
DataScraper/outputTables/mountains/: table.csv  table_1.csv  table_3.csv  table_4.csv  table_8.csv
DataScraper/outputTables/nba/: table.csv  table_1.csv  table_2.csv  table_3.csv  table_4.csv
DataScraper/outputTables/volcanoes/: table.csv  table_1.csv  table_2.csv  table_3.csv  table_4.csv  table_5.csv
DataScraper/outputX/: outputX.csv  outputX_1.csv  outputX_2.csv  outputX_3.csv
data_analysis/: plot_distribution_open.py  readme.txt
data_preparation/: preprocess.py  random_sample.py  readme.txt
ssjoin-0.1/: CMakeCache.txt  CMakeLists.txt  GitSHA1.cpp  Makefile  adaptjoin_impl.h  adaptjoin_indexes.h  allpairs.h  backup.h  cmake_install.cmake  groupjoin.h  groupjoin_indexes.h  indexes.h  input.cxx  lsh.h  main.cxx  manverify  mpjoin.h  mpjoinpolicies.h  similarity.h  “output1”
